# open5gs

configs/: 5gc.yaml.in  minimal.yaml.in
configs/open5gs/: ausf.yaml.in  meson.build  udm.yaml.in  udr.yaml.in
lib/app/: ogs-app.h  ogs-config.c  ogs-config.h
lib/core/: ogs-3gpp-types.c  ogs-3gpp-types.h  ogs-fsm.c  ogs-macros.h
lib/crypt/: ogs-crypt.h  ogs-kdf.c  ogs-kdf.h
lib/dbi/: ogs-mongoc.c  ogs-mongoc.h  subscription.c  subscription.h
lib/nas/5gs/: conv.c  conv.h  decoder.c  encoder.c  ies.c  ies.h  message.h  types.c  types.h
lib/nas/5gs/support/: nas-message.py  type-list.py
lib/nas/common/: types.h
lib/nas/eps/: types.h
lib/sbi/: client.c  client.h  context.c  context.h  conv.c  conv.h  meson.build  message.c  message.h  nnrf-build.c  nnrf-build.h  nnrf-handler.c  ogs-sbi.h  path.c  path.h  server.c  server.h
lib/sbi/contrib/: multipart_parser.c  multipart_parser.h
lib/sbi/openapi/: meson.build
lib/sbi/openapi/.openapi-generator/: config.yaml
lib/sbi/openapi/.openapi-generator/templates/: model-body.mustache
lib/sbi/openapi/model/: access_and_mobility_data.c  access_and_mobility_data.h  access_and_mobility_subscription_data.c  additional_snssai_data.c  amf3_gpp_access_registration.c  amf3_gpp_access_registration.h  amf3_gpp_access_registration_modification.c  amf3_gpp_access_registration_modification.h  amf_non3_gpp_access_registration.c  amf_non3_gpp_access_registration.h  amf_non3_gpp_access_registration_modification.c  arp.c  arp.h  atom.c  atsss_capability.c  auth_event.c  auth_event.h  auth_method.c  auth_method.h  auth_type.c  auth_type.h  authentication_info_result.c  authentication_info_result.h  authentication_subscription.c  authentication_subscription.h  authentication_vector.c  authentication_vector.h  av5_g_he_aka.c  av5_g_he_aka.h  av_eap_aka_prime.c  av_eap_aka_prime.h  av_type.c  av_type.h  battery_indication.c  battery_indication_rm.c  cag_data.c  cag_info.c  ddn_failure_subs.c  default_notification_subscription.c  default_notification_subscription.h  (+107 more)
lib/sbi/support/: generator.sh
lib/sbi/support/modified/: TS29503_Nudm_UEAU.yaml  TS29503_Nudm_UECM.yaml  TS29504_Nudr_DR.yaml  TS29505_Subscription_Data.yaml  TS29509_UEAuthentication.yaml  TS29571_CommonData.yaml
src/: meson.build
src/amf/: amf-sm.c  context.c  context.h  gmm-build.c  gmm-build.h  gmm-handler.c  gmm-handler.h  gmm-sm.c  meson.build  nas-path.c  nas-path.h  nas-security.c  nas-security.h  nausf-build.c  nausf-build.h  nausf-handler.c  nausf-handler.h  nf-sm.c  ngap-build.c  ngap-build.h  ngap-handler.c  ngap-handler.h  ngap-path.c  ngap-path.h  ngap-sm.c  nnrf-build.c  nnrf-build.h  nnrf-handler.c  nnrf-handler.h  nsmf-build.c  nsmf-build.h  nsmf-handler.c  nsmf-handler.h  nudm-build.c  nudm-build.h  sbi-path.c  sbi-path.h  timer.c  timer.h
src/ausf/: ausf-sm.c  ausf-sm.h  context.c  context.h  event.h  meson.build  nausf-handler.c  nausf-handler.h  nausf_handler.c  nausf_handler.h  nf-sm.c  nnrf-build.c  nnrf-build.h  nnrf-handler.c  nnrf-handler.h  nudm-build.c  nudm-build.h  nudm-handler.c  nudm-handler.h  sbi-path.c  sbi-path.h  timer.c  timer.h  ue-sm.c
src/hss/: hss-context.c  hss-fd-path.c
src/mme/: emm-build.c  emm-handler.c  emm-sm.c  s1ap-handler.c
src/nrf/: nf-sm.c  nnrf-build.c  nnrf-handler.c  nrf-sm.c
src/smf/: context.c  context.h  event.c  event.h  gsm-build.c  gsm-build.h  gsm-handler.c  gsm-sm.c  meson.build  nas-path.c  nas-path.h  nf-sm.c  nnrf-handler.c  nnrf-handler.h  nsmf-handler.c  nsmf-handler.h  sbi-path.c  sbi-path.h  smf-sm.c  timer.c  timer.h
src/udm/: context.c  context.h  gmm-sm.c  meson.build  nf-sm.c  nnrf-build.c  nnrf-build.h  nnrf-handler.c  nnrf-handler.h  nudm-handler.c  nudm-handler.h  nudr-build.c  nudr-build.h  nudr-handler.c  nudr-handler.h  sbi-path.c  sbi-path.h  timer.c  timer.h  udm-sm.c  udm-sm.h  ue-sm.c
src/udr/: context.c  context.h  event.h  init.c  meson.build  nnrf-handler.c  nnrf-handler.h  nudr-build.c  nudr-build.h  nudr-handler.c  nudr-handler.h  sbi-path.h  timer.c  timer.h  udr-sm.c
tests/app/: 5gc-init.c  test-5gc.h
tests/common/: context.c  context.h  gmm-build.c  gmm-build.h  gmm-handler.c  gmm-handler.h  gsm-build.c  meson.build  nas-path.c  nas-security.c  ngap-build.c  ngap-build.h  ngap-handler.c  ngap-handler.h  ngap-path.c  test-common.h
tests/minimal/: minimal-test.c
